Apply spotless and fix commands v3 in tests